@@ -1,3 +1,5 @@
+1146346624	Bug behoben: Man konnte mehr Roboter handeln als man hatte.
+1146346564	Flugerfahrung wird nun angerechnet.
 1145443860	Allianztags können nun alle drei Tage geändert werden.
 1145413304	Neues Feature: Koordinatenlesezeichen.
 1145413295	Dringender Bugfix: Roboterhandel.
